// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Paywall /> should ask to upgrade custom plan when missing feature 1`] = `
<div
  class="full-width pageWrapper"
>
  <div
    class="page-container page container-fluid"
  >
    <div
      class="paywallContainer"
    >
      <div
        class="align-items-center row"
      >
        <div
          class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview enterprise col-12 col-lg-6 col-xl-6"
        />
        <div
          class="pl-lg-5 col-12 col-lg-5 col-xl-5"
        >
          <div
            class="content"
          >
            <div
              class="flex align-items-center"
            >
              <span
                class="badge badge badge-danger"
              >
                <i
                  class="material-icons mr-1"
                >
                  warning
                </i>
                Legacy plan
              </span>
              <i
                class="material-icons upgradeChevron"
              >
                chevron_right
              </i>
              <span
                class="badge enterprise badge badge-primary"
              >
                Enterprise Plan
              </span>
            </div>
            <h1
              class="contentTitle"
            >
              Paywall header
            </h1>
            <div
              class="description"
            >
              <p>
                Paywall description
              </p>
            </div>
            <div
              class="testimonial"
            >
              <p
                class="testimonialText"
              >
                Testimonial text
              </p>
              <div
                class="d-flex align-items-center author"
              >
                <img
                  alt="avatar"
                  class="mr-3 avatar"
                  src="/static/private/img/paywalls/avatars/johndoe.jpg"
                />
                <div>
                  <p
                    class="authorName mb-1"
                  >
                    <strong>
                      John Doe
                    </strong>
                  </p>
                  <p
                    class="authorDetails"
                  >
                    Customer Experience Manager
                     
                    at
                     
                    <a
                      href="https://acme.com/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Acme Inc.
                    </a>
                  </p>
                </div>
              </div>
            </div>
            <div
              class="upgradeButton"
            >
              <div
                class="d-flex align-items-center upgradeLink"
              >
                <a
                  to="[object Object]"
                >
                  <button
                    class="upgradeButton btn btn-outline-warning"
                    type="button"
                  >
                    <span
                      class="mr-2 upgradeLabel"
                    >
                      Upgrade to New Enterprise
                    </span>
                    <img
                      alt="upgrade-icon"
                      class="upgradeIcon"
                      src="test-file-stub"
                    />
                  </button>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Paywall /> should ask to upgrade legacy plan into new plan 1`] = `
<div
  class="full-width pageWrapper"
>
  <div
    class="page-container page container-fluid"
  >
    <div
      class="paywallContainer"
    >
      <div
        class="align-items-center row"
      >
        <div
          class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview advanced col-12 col-lg-6 col-xl-6"
        />
        <div
          class="pl-lg-5 col-12 col-lg-5 col-xl-5"
        >
          <div
            class="content"
          >
            <div
              class="flex align-items-center"
            >
              <span
                class="badge badge badge-danger"
              >
                <i
                  class="material-icons mr-1"
                >
                  warning
                </i>
                Legacy plan
              </span>
              <i
                class="material-icons upgradeChevron"
              >
                chevron_right
              </i>
              <span
                class="badge advanced badge badge-primary"
              >
                Advanced Plan
              </span>
            </div>
            <h1
              class="contentTitle"
            >
              Paywall header
            </h1>
            <div
              class="description"
            >
              <p>
                Paywall description
              </p>
            </div>
            <div
              class="testimonial"
            >
              <p
                class="testimonialText"
              >
                Testimonial text
              </p>
              <div
                class="d-flex align-items-center author"
              >
                <img
                  alt="avatar"
                  class="mr-3 avatar"
                  src="/static/private/img/paywalls/avatars/johndoe.jpg"
                />
                <div>
                  <p
                    class="authorName mb-1"
                  >
                    <strong>
                      John Doe
                    </strong>
                  </p>
                  <p
                    class="authorDetails"
                  >
                    Customer Experience Manager
                     
                    at
                     
                    <a
                      href="https://acme.com/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Acme Inc.
                    </a>
                  </p>
                </div>
              </div>
            </div>
            <div
              class="upgradeButton"
            >
              <div
                class="d-flex align-items-center upgradeLink"
              >
                <a
                  to="[object Object]"
                >
                  <button
                    class="upgradeButton btn btn-outline-warning"
                    type="button"
                  >
                    <span
                      class="mr-2 upgradeLabel"
                    >
                      Upgrade to New Advanced
                    </span>
                    <img
                      alt="upgrade-icon"
                      class="upgradeIcon"
                      src="test-file-stub"
                    />
                  </button>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Paywall /> should render a page header for the feature with a page header 1`] = `
<div
  class="full-width pageWrapper"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Feature page header
    </h1>
  </div>
  <div
    class="page-container page container-fluid"
  >
    <div
      class="paywallContainer"
    >
      <div
        class="align-items-center row"
      >
        <div
          class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview advanced col-12 col-lg-6 col-xl-6"
        />
        <div
          class="pl-lg-5 col-12 col-lg-5 col-xl-5"
        >
          <div
            class="content"
          >
            <div
              class="flex align-items-center"
            >
              <span
                class="badge advanced badge badge-primary"
              >
                Advanced Plan
              </span>
            </div>
            <h1
              class="contentTitle"
            >
              Paywall header
            </h1>
            <div
              class="description"
            >
              <p>
                Paywall description
              </p>
            </div>
            <div
              class="testimonial"
            >
              <p
                class="testimonialText"
              >
                Testimonial text
              </p>
              <div
                class="d-flex align-items-center author"
              >
                <img
                  alt="avatar"
                  class="mr-3 avatar"
                  src="/static/private/img/paywalls/avatars/johndoe.jpg"
                />
                <div>
                  <p
                    class="authorName mb-1"
                  >
                    <strong>
                      John Doe
                    </strong>
                  </p>
                  <p
                    class="authorDetails"
                  >
                    Customer Experience Manager
                     
                    at
                     
                    <a
                      href="https://acme.com/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Acme Inc.
                    </a>
                  </p>
                </div>
              </div>
            </div>
            <div
              class="upgradeButton"
            >
              <div
                class="d-flex align-items-center upgradeLink"
              >
                <a
                  to="[object Object]"
                >
                  <button
                    class="upgradeButton btn btn-outline-warning"
                    type="button"
                  >
                    <span
                      class="mr-2 upgradeLabel"
                    >
                      Upgrade to Advanced
                    </span>
                    <img
                      alt="upgrade-icon"
                      class="upgradeIcon"
                      src="test-file-stub"
                    />
                  </button>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Paywall /> should render lightbox for the feature with a preview 1`] = `
<div
  class="full-width pageWrapper"
>
  <div
    class="page-container page container-fluid"
  >
    <div
      class="paywallContainer"
    >
      <div
        class="align-items-center row"
      >
        <div
          class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview advanced col-12 col-lg-6 col-xl-6"
        >
          <div>
            <img
              alt="Feature preview"
              class="img-fluid"
              src="/static/private/img/paywalls/screens/paywall.png"
            />
          </div>
        </div>
        <div
          class="pl-lg-5 col-12 col-lg-5 col-xl-5"
        >
          <div
            class="content"
          >
            <div
              class="flex align-items-center"
            >
              <span
                class="badge advanced badge badge-primary"
              >
                Advanced Plan
              </span>
            </div>
            <h1
              class="contentTitle"
            >
              Paywall header
            </h1>
            <div
              class="description"
            >
              <p>
                Paywall description
              </p>
            </div>
            <div
              class="testimonial"
            >
              <p
                class="testimonialText"
              >
                Testimonial text
              </p>
              <div
                class="d-flex align-items-center author"
              >
                <img
                  alt="avatar"
                  class="mr-3 avatar"
                  src="/static/private/img/paywalls/avatars/johndoe.jpg"
                />
                <div>
                  <p
                    class="authorName mb-1"
                  >
                    <strong>
                      John Doe
                    </strong>
                  </p>
                  <p
                    class="authorDetails"
                  >
                    Customer Experience Manager
                     
                    at
                     
                    <a
                      href="https://acme.com/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Acme Inc.
                    </a>
                  </p>
                </div>
              </div>
            </div>
            <div
              class="upgradeButton"
            >
              <div
                class="d-flex align-items-center upgradeLink"
              >
                <a
                  to="[object Object]"
                >
                  <button
                    class="upgradeButton btn btn-outline-warning"
                    type="button"
                  >
                    <span
                      class="mr-2 upgradeLabel"
                    >
                      Upgrade to Advanced
                    </span>
                    <img
                      alt="upgrade-icon"
                      class="upgradeIcon"
                      src="test-file-stub"
                    />
                  </button>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="lightbox-closed"
    >
      isOpen: 
      false
      images: 
      [{"src":"/static/private/img/paywalls/screens/paywall.png"}]
      <button
        data-testid="close-button"
        value="close"
      />
      <button
        data-testid="click-image-button"
        value="click image"
      />
    </div>
  </div>
</div>
`;

exports[`<Paywall /> should render paywall screen for the feature 1`] = `
<div
  class="full-width pageWrapper"
>
  <div
    class="page-container page container-fluid"
  >
    <div
      class="paywallContainer"
    >
      <div
        class="align-items-center row"
      >
        <div
          class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview advanced col-12 col-lg-6 col-xl-6"
        />
        <div
          class="pl-lg-5 col-12 col-lg-5 col-xl-5"
        >
          <div
            class="content"
          >
            <div
              class="flex align-items-center"
            >
              <span
                class="badge advanced badge badge-primary"
              >
                Advanced Plan
              </span>
            </div>
            <h1
              class="contentTitle"
            >
              Paywall header
            </h1>
            <div
              class="description"
            >
              <p>
                Paywall description
              </p>
            </div>
            <div
              class="testimonial"
            >
              <p
                class="testimonialText"
              >
                Testimonial text
              </p>
              <div
                class="d-flex align-items-center author"
              >
                <img
                  alt="avatar"
                  class="mr-3 avatar"
                  src="/static/private/img/paywalls/avatars/johndoe.jpg"
                />
                <div>
                  <p
                    class="authorName mb-1"
                  >
                    <strong>
                      John Doe
                    </strong>
                  </p>
                  <p
                    class="authorDetails"
                  >
                    Customer Experience Manager
                     
                    at
                     
                    <a
                      href="https://acme.com/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Acme Inc.
                    </a>
                  </p>
                </div>
              </div>
            </div>
            <div
              class="upgradeButton"
            >
              <div
                class="d-flex align-items-center upgradeLink"
              >
                <a
                  to="[object Object]"
                >
                  <button
                    class="upgradeButton btn btn-outline-warning"
                    type="button"
                  >
                    <span
                      class="mr-2 upgradeLabel"
                    >
                      Upgrade to Advanced
                    </span>
                    <img
                      alt="upgrade-icon"
                      class="upgradeIcon"
                      src="test-file-stub"
                    />
                  </button>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Paywall /> should render the empty container when paywall config is undefined 1`] = `
<div
  class="full-width pageWrapper"
/>
`;

exports[`<Paywall /> should render the empty container when required plan name was not found 1`] = `
<div
  class="full-width pageWrapper"
/>
`;
